Added book title subtitle

--- a/metadata.yml
+++ b/metadata.yml
@@ -1,8 +1,8 @@
 ---
-title: Your Awesome Book
-subtitle: A Template to Get Your Book Started
+title: Is it an alien language?
+subtitle: Learning to code in Julia
 author:
-  - Example author 1
+  - Example Fortune Walla
   - Example author 2
 
 html-license: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
